# fake-cargo-build

./: Cargo.toml  README.md
src/: main.rs
