[package]
name = "fake-cargo-build"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
crates_io_api = "0.11.0"
kdam = { version = "0.5.2", features = ["template"] }
rand = "0.8.5"
rayon = "1.10.0"
termsize = "0.1.8"
tokio = { version = "1.38.0", features = ["full"] }
winapi = "0.3.9"
